[tool.poetry]
name = "sk-forge"
version = "0.1.0"
description = "A place to forge sklearn pipelines"
authors = ["Tom <tomrfreeman3@gmail.com>"]
readme = "README.md"
include = ["pipeline_forge"]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.6.0"
scikit-learn = "^1.3.0"
prophet = "^1.1.4"
ipykernel = "^6.27.1"

[tool.poetry.group.dev.dependencies]
imblearn = "^0.0"
pandas = "^2.1.0"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
